--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-
 body{
   font-family: 'Roboto', sans-serif;
+
   background-color: black;
 }
 
@@ -8,20 +8,35 @@ body{
 table{
   color: rgb(222, 228, 237);
   padding-top: 5%;
+  text-align: center;
   margin-left:auto;
   margin-right:auto;
+  font-weight: 900;
 }
 
 
 td{
-  font-size: 50px;
+  font-size: 70px;
   border-style: solid;
   border-width: 1px;
   padding-left: 205px;
   padding-right: 205px;
   border-color: rgba(50,50,50,0.4);
 }
+
+
 span{
-  font-size: 50px;
+  font-size: 70px;
+
   padding-left: 80px;
 }
+
+h2{
+  font-size: 70px;
+  color: rgb(222, 228, 237);
+}
+/* .title{
+  font-size: 62px;
+
+  align-content: center;
+} */
